openETCS ArchitectureAndDesign/Work Groups/Group 2/Procedure and DMI Management/RailDriverMachineInterface/Test/Test.err
*** Semantic Error (ERR_516): Undefined variable
  at file C:\Users\Valerio\AppData\Local\Temp\ScadeChecker\2404\checker_file.scade, line 1037, character 0
  at path Test_DMI/digit_display/
 The output variable digit_display has no definition
