openETCS ArchitectureAndDesign/Work Groups/Group 2/Procedure and DMI Management/RailDriverMachineInterface/Test/Test.sdy
<?xml version="1.0" encoding="UTF-8"?>
<MappingFile>
	 	<operatorMappings>
		<OperatorMapping name="Test_DMI" oid="!ed/be70/5822/13CC/5325a31646c5">
			<mappingItems>
				<MappingItem>
					<output>
						<Plug name="SpeedTarget" type="real" pathname="TestPanel.rgfx" layer="control_panel"/>
					</output>
					<inputs>
						<Variable name="RP_SpeedTarget" type="real" oid="!ed/3c26/776B/17A4/5326c178437d" instancepath="Test_DMI/"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Plug name="SpeedPermitted" type="real" pathname="TestPanel.rgfx" layer="control_panel"/>
					</output>
					<inputs>
						<Variable name="RP_SpeedPermitted" type="real" oid="!ed/3c28/776B/17A4/5326c18b3f49" instancepath="Test_DMI/"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Plug name="SpeedRelease" type="real" pathname="TestPanel.rgfx" layer="control_panel"/>
					</output>
					<inputs>
						<Variable name="RP_SpeedRelease" type="real" oid="!ed/3c27/776B/17A4/5326c18123d1" instancepath="Test_DMI/"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Plug name="OverA" type="bool" pathname="..\SCADE Display\DMI.sgfx" layer="DMI"/>
					</output>
					<inputs>
						<Variable name="OverA" type="bool" oid="!ed/3e7d/5AE3/1D14/5326e86bb14" instancepath="Test_DMI/"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Plug name="MousePressed" type="bool" pathname="..\SCADE Display\DMI.sgfx" layer="DMI"/>
					</output>
					<inputs>
						<Variable name="MousePressed" type="bool" oid="!ed/3e7e/5AE3/1D14/5326e8731a3a" instancepath="Test_DMI/"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Plug name="VisibleGradients" type="bool^12" pathname="..\SCADE Display\DMI.sgfx" layer="DMI"/>
					</output>
					<inputs>
						<Variable name="VisibleGradients" type="bool^12" oid="!ed/3f42/3B2E/1A18/532719104f" instancepath="Test_DMI/"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Plug name="Brake" type="real" pathname="TestPanel.rgfx" layer="control_panel"/>
					</output>
					<inputs>
						<Variable name="Brake" type="real" oid="!ed/3f6c/447E/9B0/53271fa837bc" instancepath="Test_DMI/"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Plug name="lala" type="bool" pathname="..\SCADE Display\DMI.sgfx" layer="DMI"/>
					</output>
					<inputs>
						<Variable name="lala" type="bool" oid="!ed/3fc1/5944/6EC/54b7ad3948b" instancepath="Test_DMI/"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Plug name="insideButton" type="bool" pathname="..\SCADE Display\DMI.sgfx" layer="DMI"/>
					</output>
					<inputs>
						<Variable name="insideButton" type="bool" oid="!ed/142cd/5944/6EC/54b7bc524aaa" instancepath="Test_DMI/"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Plug name="keyarray" type="bool^12" pathname="..\SCADE Display\DMI.sgfx" layer="DMI"/>
					</output>
					<inputs>
						<Variable name="arraykey" type="bool^12" oid="!ed/4002/3188/964/54be57975036" instancepath="Test_DMI/"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Variable name="TrainPosition" type="real" oid="!ed/3bf4/776B/17A4/5326bc667f16" instancepath="Test_DMI/"/>
					</output>
					<inputs>
						<Plug name="TrainPosition" type="real" pathname="..\SCADE Display\DMI.sgfx" layer="DMI"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Variable name="TrainSpeed" type="real" oid="!ed/3bfd/776B/17A4/5326bf417118" instancepath="Test_DMI/"/>
					</output>
					<inputs>
						<Plug name="TrainSpeed" type="real" pathname="..\SCADE Display\DMI.sgfx" layer="DMI"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Variable name="SpeedDigitOne" type="real" oid="!ed/3bff/776B/17A4/5326bf74d46" instancepath="Test_DMI/"/>
					</output>
					<inputs>
						<Plug name="SpeedDigitOne" type="real" pathname="..\SCADE Display\DMI.sgfx" layer="DMI"/>
						<Plug name="Value" type="real" pathname="TestPanel.rgfx" layer="control_panel"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Variable name="SpeedDigitTwo" type="real" oid="!ed/3c00/776B/17A4/5326bf7e807" instancepath="Test_DMI/"/>
					</output>
					<inputs>
						<Plug name="SpeedDigitTwo" type="real" pathname="..\SCADE Display\DMI.sgfx" layer="DMI"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Variable name="SpeedDigitThree" type="real" oid="!ed/3c01/776B/17A4/5326bf857e63" instancepath="Test_DMI/"/>
					</output>
					<inputs>
						<Plug name="SpeedDigitThree" type="real" pathname="..\SCADE Display\DMI.sgfx" layer="DMI"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Variable name="SpeedTarget" type="real" oid="!ed/3c03/776B/17A4/5326bfb0164a" instancepath="Test_DMI/"/>
					</output>
					<inputs>
						<Plug name="Vtarget" type="real" pathname="..\SCADE Display\DMI.sgfx" layer="DMI"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Variable name="SpeedPermitted" type="real" oid="!ed/3c02/776B/17A4/5326bf9135a6" instancepath="Test_DMI/"/>
					</output>
					<inputs>
						<Plug name="Vperm" type="real" pathname="..\SCADE Display\DMI.sgfx" layer="DMI"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Variable name="SpeedRelease" type="real" oid="!ed/3c04/776B/17A4/5326bfbc20c7" instancepath="Test_DMI/"/>
					</output>
					<inputs>
						<Plug name="Vrelease" type="real" pathname="..\SCADE Display\DMI.sgfx" layer="DMI"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Variable name="GradientsStart" type="real^12" oid="!ed/3d27/5AE3/1D14/5326e5135b40" instancepath="Test_DMI/"/>
					</output>
					<inputs>
						<Plug name="GradientsStart" type="real^12" pathname="..\SCADE Display\DMI.sgfx" layer="DMI"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Variable name="GradientsEnd" type="real^12" oid="!ed/3d28/5AE3/1D14/5326e51a563" instancepath="Test_DMI/"/>
					</output>
					<inputs>
						<Plug name="GradientsEnd" type="real^12" pathname="..\SCADE Display\DMI.sgfx" layer="DMI"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Variable name="GradientsValue" type="real^12" oid="!ed/3d29/5AE3/1D14/5326e52075d1" instancepath="Test_DMI/"/>
					</output>
					<inputs>
						<Plug name="GradientsValue" type="real^12" pathname="..\SCADE Display\DMI.sgfx" layer="DMI"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Variable name="DistanceToTarget" type="real" oid="!ed/3dfb/5AE3/1D14/5326e76017bc" instancepath="Test_DMI/"/>
					</output>
					<inputs>
						<Plug name="DistanceToTarget" type="real" pathname="..\SCADE Display\DMI.sgfx" layer="DMI"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Variable name="DistanceToTargetVisible" type="bool" oid="!ed/3e2d/5AE3/1D14/5326e7fa6673" instancepath="Test_DMI/"/>
					</output>
					<inputs>
						<Plug name="DistanceToTargetVisible" type="bool" pathname="..\SCADE Display\DMI.sgfx" layer="DMI"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Variable name="InterpolatedDistanceToTarget" type="real" oid="!ed/7bb6/1528/B54/53270ead390a" instancepath="Test_DMI/"/>
					</output>
					<inputs>
						<Plug name="InterpolatedDistanceToTarget" type="real" pathname="..\SCADE Display\DMI.sgfx" layer="DMI"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Variable name="StatusSymbolBrake" type="bool" oid="!ed/3fc2/447E/9B0/532720d650e3" instancepath="Test_DMI/"/>
					</output>
					<inputs>
						<Plug name="StatusSymbolBrake" type="bool" pathname="..\SCADE Display\DMI.sgfx" layer="DMI"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Variable name="PointerColor" type="int" oid="!ed/3f81/42B3/520/5405b95e7c90" instancepath="Test_DMI/"/>
					</output>
					<inputs>
						<Plug name="PointerColor" type="int" pathname="..\SCADE Display\DMI.sgfx" layer="DMI"/>
					</inputs>
				</MappingItem>
				<MappingItem>
					<output>
						<Variable name="showlala" type="bool" oid="!ed/3fa9/5944/6EC/54b7ac3d467f" instancepath="Test_DMI/"/>
					</output>
					<inputs>
						<Plug name="showlala" type="bool" pathname="..\SCADE Display\DMI.sgfx" layer="DMI"/>
					</inputs>
				</MappingItem>
			</mappingItems>
		</OperatorMapping>
	</operatorMappings>
</MappingFile>
